--- a/src/Deg.Toolbelt/Deg.Toolbelt.csproj
+++ b/src/Deg.Toolbelt/Deg.Toolbelt.csproj
@@ -45,6 +45,9 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
@@ -62,17 +65,21 @@
   <ItemGroup>
     <Compile Include="Argument.cs" />
     <Compile Include="Class.cs" />
+    <Compile Include="CSharpClass.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="MySqlTableRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
+    <Compile Include="SqlRepository.cs" />
     <Compile Include="Table.cs" />
-    <Compile Include="TableRepository.cs" />
+    <Compile Include="SqlTableRepository.cs" />
     <Compile Include="TableService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
