--- a/src/Deg.Toolbelt/app.config
+++ b/src/Deg.Toolbelt/app.config
@@ -4,9 +4,14 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
 	</startup>
 	<appSettings>
-		<add key="database" value="test"/>
+		<add key="database" value="test" />
 	</appSettings>
 	<connectionStrings>
-		<add name="test" connectionString="Server=localhost;Database=eForm;Trusted_Connection=True;"/>
+		<add name="test" connectionString="Server=localhost;Database=eForm;Trusted_Connection=True;" />
 	</connectionStrings>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
