--- a/src/Deg.Toolbelt/Deg.Toolbelt.csproj
+++ b/src/Deg.Toolbelt/Deg.Toolbelt.csproj
@@ -68,6 +68,7 @@
     <Compile Include="CSharpClass.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="MySqlRepository.cs" />
     <Compile Include="MySqlTableRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
