--- a/src/Deg.Toolbelt.Tests/Deg.Toolbelt.Tests.csproj
+++ b/src/Deg.Toolbelt.Tests/Deg.Toolbelt.Tests.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MySqlRepositoryTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test1.cs" />
